[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }